Fixed about.css scaling - massive screens had too small of a scaling factor, raised this for massive screen size breakpoints

--- a/src/Routes/Homepage/About.css
+++ b/src/Routes/Homepage/About.css
@@ -65,9 +65,3 @@
       width: 70%;
     }
 }
-
-@media screen and (min-width: 2100px){
-    .about {
-      width: 60%;
-    }
-}
